<resources>
    <string name="app_name">Redlands Local Businesses</string>
    <string name="app_description">Our app is designed to help the Redland’s community find local businesses that satisfy their customer’s needs.</string>
    <string name="fitness">fitness</string>
    <string name="restaurants">restaurants</string>
    <string name="bars">bars</string>
    <string name="hotels">hotels</string>
    <string name="entertainment">entertainment</string>
    <string name="beauty">beauty</string>
    <string name="app_directions">Select a service from the buttons below.</string>
    <string name = "content_landing_image">Landing Page Icon Picture</string>
    <string name = "content_food_btn">Food Button</string>
    <string name = "content_bars_btn">Bars Button</string>
    <string name = "content_hotel_btn">Hotel Button</string>
    <string name = "content_entertainment_btn">Entertainment Button</string>
    <string name = "content_fitness_btn">Fitness Button</string>
    <string name = "content_beauty_btn">Beauty Button</string>
    <string name="results_title">Results Title</string>
    <string name="results_image">Results Image</string>
    <string name="results_description">Description Text</string>
    <string name="results_gps_button">Show me Where!</string>
    <string name="results_comments">Comments Section</string>
    <string name="results_comments_title">Title</string>
    <string name="results_comments_body">Comment Body</string>
    <string name="results_comments_image">User Profile Image</string>
    <string name="search_item_name">Business Name</string>
    <string name="search_item_description">Description</string>
    <string name="results_review_title">Reviews</string>
    <string name="results_description_title">Description</string>
</resources>